--- a/views/components/sidebar.ejs
+++ b/views/components/sidebar.ejs
@@ -45,6 +45,13 @@
     </li><!-- End Products Page Nav -->
 
     <li class="nav-item">
+      <a class="nav-link collapsed" href="/products/activeLogList">
+        <i class="bi bi-question-circle"></i>
+        <span>ActiveLg</span>
+      </a>
+    </li><!-- End F.A.Q Page Nav -->
+
+    <li class="nav-item">
       <a class="nav-link collapsed" href="pages-contact.html">
         <i class="bi bi-envelope"></i>
         <span>Contact</span>
